# myndaix-runtime

./: .dockerignore  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  LICENSE  README.md  SETUP.md  demo.py  docker-compose.yml  pyproject.toml  run-matrix.sh  test.sh
docs/: MX_QUALITY_ORCHESTRATOR.md  OPERATING.md  PRIOR_ART_HERMES_OPENCLAW.md  agent-orchestrator-north-star.md  always-on-agent-research.md  auto-capture-design.md  auto-capture-research.md  automerge-demo-throwaway.md  automerge-design.md  automerge-research.md  autonomy-ladder-addendum.md  controller-loop-design.md  controller-loop-plan.md  controller-loop-research.md  controller-migration-to-mini.md  curator-design.md  higgsfield-runner-design.md  higgsfield-v2-design.md  inbox-assistant-deploy.md  inbox-assistant-design.md  label-throughput-design.md  learning-rung-deploy.md  learning-rung-design.md  learning-rung-plan.md  liveness-canary-design.md  memory-second-brain-design.md  mx-ask-librarian-design.md  mxr-review-context-design.md  orchestrator-design.md  outcomes-dials-design.md  outcomes-ledger-design.md  phase2-autonomous-fix-flip-design.md  phase2-autonomous-fix-flip-research.md  phase2-concurrency-design.md  phase2-controller-autofix-design.md  phase2-plan.md  phase2-pr4-fix-stage-design.md  phase2-pr4-fix-stage-spec.md  phase2-section4-v0.4-counter-row.md  phase2-verifier-hardening-design.md  (+7 more)
orchestrator/: ai.myndaix.automerge.plist.example  ai.myndaix.controller.plist.example  ai.myndaix.disk-cleanup.plist.example  ai.myndaix.fix-sweep.plist.example  ai.myndaix.tailscale-relogin.plist.example  autofix-arm.sh  automerge-preflight.sh  automerge-tick.sh  controller-tick.sh  disk-cleanup.sh  fix-sweep.sh  inbox-assistant-tick.sh  play-fix.sh  play-review.sh  probe-git-write-vector.sh  repos.json.example  tailscale-relogin.sh  test-ask-librarian.sh  test-disk-cleanup.sh  test-fix.sh  test-inbox-assistant.sh  (+4 more)
(+162 files in other folders)
