[project]
name = "myndaix-runtime"
version = "0.1.0"
description = "MyndAIX Team Runtime - a deterministic spine that routes work to agent CLIs/APIs. A clean-room replacement for a coupled multi-agent runtime."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psutil>=5.9",      # process-tree control
    "pexpect>=4.9",     # stubborn interactive CLIs
    "httpx>=0.27",      # api-reach agents (OpenAI-compatible chat) + the HTTP surface
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]
# MX Quality Orchestrator persona / Soul-ID face gate (critic.embed_face). Optional + heavy
# (downloads the buffalo_l ArcFace model on first use); the pure gate logic runs without it.
persona = ["insightface>=0.7", "onnxruntime>=1.17", "opencv-python-headless>=4.9", "numpy>=1.26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runtime"]

[tool.ruff]
line-length = 100
